--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ author: 'Robin Genz <mail@robingenz.dev>'
 
 # Define your inputs here.
 inputs:
-  siteUrl:
+  siteUrl: 'https://yagc.tahriver.online'
     description: 'The domain or site URL of the site to be indexed.'
     required: true
   gcpServiceAccountKey:
